internal/corpus/testdata/cases/multispread/cond_class_part_renderer.txtar
# fold x #88 interaction: an element with >=2 spreads (so it FOLDS) that ALSO
# carries a conditional class part whose value is a REGISTERED renderer type
# (pg.Text -> rend.PgText). The fold routes class through composeBag ->
# classEntryExpr; this pins that the #88 conditional-class-part renderer harvest
# still applies through the fold path (renders class="btn", not a type error).
-- gsx.toml --
[renderers]
"./pg.Text" = "./rend.PgText"
-- pg/pg.go --
package pg

type Text struct {
	String string
	Valid  bool
}
-- rend/rend.go --
package rend

import "corpustest/cases/multispread_cond_class_part_renderer/pg"

func PgText(t pg.Text) string {
	if !t.Valid {
		return ""
	}
	return t.String
}
-- input.gsx --
package views

import (
	"corpustest/cases/multispread_cond_class_part_renderer/pg"

	"github.com/gsxhq/gsx"
)

func mkText(s string, valid bool) pg.Text { return pg.Text{String: s, Valid: valid} }

component Page(val pg.Text, on bool, a gsx.Attrs, b gsx.Attrs) {
	<div class={ val: on } { a... } { b... }>x</div>
}
-- invoke --
Page(mkText("btn", true), true, gsx.Attrs{{Key: "data-a", Value: "1"}}, gsx.Attrs{{Key: "data-b", Value: "2"}})
-- diagnostics.golden --
-- render.golden --
<div class="btn" data-a="1" data-b="2">x</div>
-- generated.x.go.golden --
// Code generated by gsx; DO NOT EDIT.

package views

import (
	"corpustest/cases/multispread_cond_class_part_renderer/pg"

	_gsxctx "context"
	_gsxf0 "corpustest/cases/multispread_cond_class_part_renderer/rend"
	"github.com/gsxhq/gsx"
	_gsxrt "github.com/gsxhq/gsx"
	_gsxio "io"
)

//line input.gsx:9:1
func mkText(s string, valid bool) pg.Text { return pg.Text{String: s, Valid: valid} }

//line input.gsx:11:1
func Page(val pg.Text, on bool, a gsx.Attrs, b gsx.Attrs) _gsxrt.Node {
	return _gsxrt.Func(func(ctx _gsxctx.Context, _gsxw _gsxio.Writer) error {
		_gsxgw := _gsxrt.W(_gsxw)
//line input.gsx:12:2
		_gsxv0 := _gsxrt.ConcatAttrs(_gsxrt.Attrs{{Key: "class", Value: _gsxrt.ClassJoin(_gsxrt.ClassIf(_gsxf0.PgText((val)), on))}}, a, b)
		_gsxgw.S("<div")
		_gsxgw.ClassMerged(_gsxrt.DefaultClassMerge, _gsxv0.Class())
		_gsxgw.StyleMerged("", _gsxv0.Style())
		_gsxgw.Spread(ctx, _gsxv0, []string{"action", "cite", "data", "formaction", "href", "manifest", "ping", "poster", "src", "xlink:href"}, []string{"background"}, []string{"imagesrcset", "srcset"}, nil, []string{"class", "style"})
		_gsxgw.S(">x</div>")
		return _gsxgw.Err()
	})
}
